--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jose": "^6.1.0",
     "lucide-react": "^0.554.0",
     "next": "^15.5.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "raw-body": "^3.0.1",
@@ -47,6 +48,7 @@
     "react-redux": "^9.2.0",
     "react-simple-maps": "^3.0.0",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.7",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
